--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
   "dependencies": {
     "@doot-oracles/client": "^1.0.5",
     "dotenv": "^16.3.2"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
